--- a/index.css
+++ b/index.css
@@ -27,10 +27,31 @@ h1{
     font-size: 6rem  ;
     line-height: 1;
     margin: 0 2rem  ;
+    color: rgb(0, 102, 255);
 }
 .countdown-el{
     text-align: center; 
 }
 .countdown-el span{
     font-size: 2rem  ;
+    color: rgb(98, 0, 255);
+}
+@media screen  and (max-width:500px){
+    h1{
+        font-size: 4rem;
+        text-align: center;
+        margin-bottom: 20px;
+        margin-top: 2rem;
+        
+    }
+    .big-text{
+        font-size: 2rem;
+        
+    }
+    .countdown-container{
+        display: flex;
+        flex-direction: column;
+        gap:20px;
+    }
+    
 }
